Fixed article heading and paragraph spacing

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -158,6 +158,14 @@ article h2 {
     margin-bottom: 0;
 }
 
+article:first-child h2 {
+    margin-top: 0;
+}
+
+article:last-child p {
+    margin-bottom: 0;
+}
+
 article p.author {
     color: #888;
     font-size: .9em;
